Got Backend working, Got Airflow Working

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,11 +73,17 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
+    # Location of the football database
+    FOOTBALL_DB_PATH: /opt/airflow/football-and-spark/database/football_data.db
+
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/football-and-spark/backend/data:/opt/airflow/football-and-spark/backend/data
+    - ${AIRFLOW_PROJ_DIR:-.}/football-and-spark/backend/database/utils:/opt/airflow/football-and-spark/backend/database/utils
+
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
